Simciv indev R4.0 (work in progress) :

+ Added wild ducks (they breed naturally except if we kill them all)
+ Added hunters
+ Added robbers and criminality
+ Added policemen
+ Added loggers : trees can be cut !
+ Added wood manufactures
+ Added new sounds
* Clicking on a notification will move the view if needed
* Increased house inhabitants and required employees, except for farmlands
...

Simciv indev R3.2 (2012-10-01) :

+ Added state information on conveyers info line
- Fixed farmlands growing too fast after loading a saved game
- Fixed ID collisions leading to corrupted map when loading a saved game
- Fixed units loosing their map grid tracks when another unit passes at the same place
- Fixed pathfinding not working when loading a saved game

Simciv indev R3.1 (2012-09-30) :

+ Re-added death icon when houses inhabitants die
- Fixed game window positionning
- Fixed zone erasing not working

Simciv indev R3.0 (2012-09-29) :

+ The game can be saved and loaded (only 1 save file yet)
+ Builds can burn (display fire risks with key [5])
+ Added main menu
+ Added water sources
+ Added fire stations and firemen
+ Added time bar showing the current date (not realistic)
+ Added notification system on right side of the screen
+ Added report window when right-clicking on a building
+ Added crash window and log system
* New population and job systems
* Citizen can re-grow if there is room and food in houses
* Only houses and farmland can be repeated (by cursor drag)
* New pathfinding system

Simciv indev R2.01 (2012-08-25) :

+ Fixed early starves
+ Fixed resource distribution lags

Simciv indev R2.0 (2012-08-23) :

+ Added money counter (and building costs)
+ Added taxmen offices and taxmen
+ Added markets and delivery men
+ Added time progression (only for months)
+ Added bushes
+ Added citizen hunger (they slow down and finally die/quit the city)
+ Added builds maintenance, with architects
+ Added overlays (keys 0, 1, 2 and 3)
+ Added fast-forwarding (space key)